# Sigma

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: main.yml
Sigma/: CMakeLists.txt
Sigma/Editor/: CMakeLists.txt
Sigma/Editor/src/: main.cpp  resources.qrc
Sigma/Editor/src/Common/Resources/: StyleSheetManager.hpp  constants.hpp
Sigma/Editor/src/Editor/: Editor.cpp  Editor.hpp  Editor.ui
Sigma/Editor/src/Editor/Widgets/: EngineWidget.cpp  EngineWidget.hpp
Sigma/Engine/: CMakeLists.txt
Sigma/Engine/include/Sigma/Engine/DataStructures/: SparseSet.hpp
Sigma/Engine/include/Sigma/Engine/DataStructures/Iterators/: random_access_iterator.hpp
Sigma/Engine/include/Sigma/Engine/Utilities/: vector_utils.hpp
Sigma/Engine/include/Sigma/Engine/common/: types.hpp
Sigma/Engine/include/Sigma/Engine/utilities/: tag.hpp
Sigma/Engine/src/Application/: Application.cpp
Sigma/Engine/test/: CMakeLists.txt
Sigma/Engine/test/DataStructures/: test_SparseSet.cpp
Sigma/Engine/test/DataStructures/Iterators/: test_random_access_iterator.cpp
Sigma/Engine/test/Utilities/: test_vector_utils.cpp
Sigma/Math/: CMakeLists.txt
Sigma/Math/include/Sigma/Math/: Matrix.hpp  Vector.hpp  vector_utils.hpp
Sigma/Math/test/: CMakeLists.txt  test_Matrix.cpp  test_vector.cpp  test_vector_utils.cpp
cmake/: CompilerWarnings.cmake  Doxygen.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  Testing.cmake
resources/StyleSheets/: Dark.qss
src/Math/: CMakeLists.txt
test/: CMakeLists.txt
test/Sigma/Math/: CMakeLists.txt  test_vector.cpp
